Class Enum dinges gemaakt voor de roles

--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -148,7 +148,6 @@
     <Compile Include="Models\Beoordeling.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\Gespreksformulier.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
     </Compile>
@@ -177,6 +176,7 @@
     <Compile Include="Models\RedenStudent.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Rollen.cs" />
     <Compile Include="Models\Stage.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
     </Compile>
