--- a/PVB Stage Applicatie/Web.config
+++ b/PVB Stage Applicatie/Web.config
@@ -27,7 +27,7 @@
     <httpRuntime targetFramework="4.5.1" />
     <compilation debug="true" targetFramework="4.5.1" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Login" timeout="2880" />
     </authentication>
     <pages>
       <namespaces>
