--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\jquery-ui.theme.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -320,12 +321,10 @@
     <Content Include="Views\Docent\Details.cshtml" />
     <Content Include="Views\Docent\Create.cshtml" />
     <Content Include="Views\Docent\Edit.cshtml" />
-    <Content Include="Views\Docent\Delete.cshtml" />
     <Content Include="Views\Begeleider\Index.cshtml" />
     <Content Include="Views\Begeleider\Details.cshtml" />
     <Content Include="Views\Begeleider\Create.cshtml" />
     <Content Include="Views\Begeleider\Edit.cshtml" />
-    <Content Include="Views\Begeleider\Delete.cshtml" />
     <Content Include="Views\GespreksFormulier\Index.cshtml" />
     <Content Include="Views\GespreksFormulier\Details.cshtml" />
     <Content Include="Views\GespreksFormulier\Create.cshtml" />
