Werkende Roles Toegevoegd

--- a/PVB Stage Applicatie/Web.config
+++ b/PVB Stage Applicatie/Web.config
@@ -50,11 +50,24 @@
         <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
-    <roleManager defaultProvider="DefaultRoleProvider" enabled="true">
+    <!--<roleManager defaultProvider="DefaultRoleProvider" enabled="true" cacheRolesInCookie="true">
       <providers>
         <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
-    </roleManager>
+    </roleManager>-->
+
+    <roleManager
+    enabled="true"
+    cacheRolesInCookie="true"
+    cookieName=".ASPXROLES"
+    cookieTimeout="30"
+    cookiePath="/"
+    cookieRequireSSL="false"
+    cookieSlidingExpiration="true"
+    cookieProtection="All"
+    defaultProvider="AspNetSqlRoleProvider"
+    createPersistentCookie="false"
+    maxCachedResults="25" />
     <!--
             If you are deploying to a cloud environment that has multiple web server instances,
             you should change session state mode from "InProc" to "Custom". In addition,
