--- a/PVB Stage Applicatie/Web.config
+++ b/PVB Stage Applicatie/Web.config
@@ -11,7 +11,17 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PVB Stage Applicatie-20141023111602;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PVB Stage Applicatie-20141023111602.mdf"
       providerName="System.Data.SqlClient" />
-    <add name="StageApplicatieEntities" connectionString="metadata=res://*/Models.StageApplicatieModel.csdl|res://*/Models.StageApplicatieModel.ssdl|res://*/Models.StageApplicatieModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=jampot.ddns.net;initial catalog=StageApplicatie;user id=PVB;password=PVB;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="StageApplicatieEntities" connectionString="metadata=
+         res://*/Models.StageApplicatieModel.csdl|
+         res://*/Models.StageApplicatieModel.ssdl|
+         res://*/Models.StageApplicatieModel.msl;
+         provider=System.Data.SqlClient;
+         provider connection string=&quot;data source=jampot.ddns.net;
+         initial catalog=StageApplicatie;
+         user id=PVB;
+         password=PVB;
+         MultipleActiveResultSets=True;
+         App=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
     <add name="LoginContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=LoginContext-20141023230228; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|LoginContext-20141023230228.mdf"
       providerName="System.Data.SqlClient" />
@@ -40,23 +50,40 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <profile defaultProvider="DefaultProfileProvider">
+    <profile>
       <providers>
-        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+        <clear/>
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
-      <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
-      </providers>
+    <membership defaultProvider="CustomMembershipProvider">
+        <providers>
+          <clear/>
+          <add name="CustomMembershipProvider" type="PVB Stage Applicatie.Models.CustomMembershipProvider"
+              connectionStringName="StageApplicatieEntities"
+              enablePasswordRetrieval="false"
+              enablePasswordReset="true"
+              requiresQuestionAndAnswer="false"
+              requiresUniqueEmail="false"
+              maxInvalidPasswordAttempts="5"
+              minRequiredPasswordLength="6"
+              minRequiredNonalphanumericCharacters="0"
+              passwordAttemptWindow="10"
+              applicationName="/" />
+        </providers>
     </membership>
     <!--<roleManager defaultProvider="DefaultRoleProvider" enabled="true" cacheRolesInCookie="true">
       <providers>
         <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </roleManager>-->
-
-    <roleManager
+    <roleManager enabled="true" defaultProvider="CustomRoleProvider">
+      <providers>
+        <clear/>
+        <add name="CustomRoleProvider" type="PVB_Stage_Applicatie.Models.CustomRoleProvider" connectionStringName="StageApplicatieEntities" />
+      </providers>
+    </roleManager>
+    <!--<roleManager
     enabled="true"
     cacheRolesInCookie="true"
     cookieName=".ASPXROLES"
@@ -68,17 +95,13 @@
     defaultProvider="AspNetSqlRoleProvider"
     createPersistentCookie="false"
     maxCachedResults="25" />
-    <!--
-            If you are deploying to a cloud environment that has multiple web server instances,
-            you should change session state mode from "InProc" to "Custom". In addition,
-            change the connection string named "DefaultConnection" to connect to an instance
-            of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
-      -->
+    --><!--
+      --><!--
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
-    </sessionState>
+    </sessionState>-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
