--- a/PVB Stage Applicatie/Web.config
+++ b/PVB Stage Applicatie/Web.config
@@ -102,6 +102,9 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>-->
+    <globalization
+           culture="nl-NL"
+        />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
