--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -214,6 +214,7 @@
       <DependentUpon>StageApplicatieModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\StudentViewModel.cs" />
+    <Compile Include="Models\TechnischeAspectenViewModel.cs" />
     <Compile Include="Models\TussentijdseBeindeging.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
     </Compile>
