--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Models\Beoordeling.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BeoordelingsJson.cs" />
     <Compile Include="Models\CustomRoleProvider.cs" />
     <Compile Include="Models\Gespreksformulier.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
@@ -214,6 +215,7 @@
       <DependentUpon>StageApplicatieModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\StudentViewModel.cs" />
+    <Compile Include="Models\TechnischeAspectenViewModel.cs" />
     <Compile Include="Models\TussentijdseBeindeging.cs">
       <DependentUpon>StageApplicatieModel.tt</DependentUpon>
     </Compile>
