CreateBeeindiging front end client

--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -375,6 +375,7 @@
     <Content Include="Views\Beoordeling\CreateFormulier.cshtml" />
     <Content Include="Views\GespreksFormulier\CreateGespreksFormulier.cshtml" />
     <Content Include="Views\TussentijdseBeeindiging\Selecteer.cshtml" />
+    <Content Include="Views\TussentijdseBeeindiging\CreateBeeindeging.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
