--- a/PVB Stage Applicatie/Web.config
+++ b/PVB Stage Applicatie/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -9,22 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PVB Stage Applicatie-20141023111602;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PVB Stage Applicatie-20141023111602.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="StageApplicatieEntities" connectionString="metadata=
-         res://*/Models.StageApplicatieModel.csdl|
-         res://*/Models.StageApplicatieModel.ssdl|
-         res://*/Models.StageApplicatieModel.msl;
-         provider=System.Data.SqlClient;
-         provider connection string=&quot;data source=jampot.ddns.net;
-         initial catalog=StageApplicatie;
-         user id=PVB;
-         password=PVB;
-         MultipleActiveResultSets=True;
-         App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="LoginContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=LoginContext-20141023230228; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|LoginContext-20141023230228.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PVB Stage Applicatie-20141023111602;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PVB Stage Applicatie-20141023111602.mdf" providerName="System.Data.SqlClient" />
+    <add name="StageApplicatieEntities" connectionString="metadata=          res://*/Models.StageApplicatieModel.csdl|          res://*/Models.StageApplicatieModel.ssdl|          res://*/Models.StageApplicatieModel.msl;          provider=System.Data.SqlClient;          provider connection string=&quot;data source=jampot.ddns.net;          initial catalog=StageApplicatie;          user id=PVB;          password=PVB;          MultipleActiveResultSets=True;          App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LoginContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=LoginContext-20141023230228; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|LoginContext-20141023230228.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -52,24 +39,14 @@
     </pages>
     <profile>
       <providers>
-        <clear/>
+        <clear />
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
     <membership defaultProvider="CustomMembershipProvider">
         <providers>
-          <clear/>
-          <add name="CustomMembershipProvider" type="PVB Stage Applicatie.Models.CustomMembershipProvider"
-              connectionStringName="StageApplicatieEntities"
-              enablePasswordRetrieval="false"
-              enablePasswordReset="true"
-              requiresQuestionAndAnswer="false"
-              requiresUniqueEmail="false"
-              maxInvalidPasswordAttempts="5"
-              minRequiredPasswordLength="6"
-              minRequiredNonalphanumericCharacters="0"
-              passwordAttemptWindow="10"
-              applicationName="/" />
+          <clear />
+          <add name="CustomMembershipProvider" type="PVB Stage Applicatie.Models.CustomMembershipProvider" connectionStringName="StageApplicatieEntities" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
         </providers>
     </membership>
     <!--<roleManager defaultProvider="DefaultRoleProvider" enabled="true" cacheRolesInCookie="true">
@@ -79,7 +56,7 @@
     </roleManager>-->
     <roleManager enabled="true" defaultProvider="CustomRoleProvider">
       <providers>
-        <clear/>
+        <clear />
         <add name="CustomRoleProvider" type="PVB_Stage_Applicatie.Models.CustomRoleProvider" connectionStringName="StageApplicatieEntities" />
       </providers>
     </roleManager>
@@ -102,9 +79,7 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>-->
-    <globalization
-           culture="nl-NL"
-        />
+    <globalization culture="nl-NL" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -133,11 +108,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
-        <bindingRedirect oldVersion="1.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
