--- a/PVB Stage Applicatie/packages.config
+++ b/PVB Stage Applicatie/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
+  <package id="FileHelpers" version="2.0.0.0" targetFramework="net451" />
   <package id="jQuery" version="1.8.2" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net451" />
