--- a/PVB Stage Applicatie/PVB Stage Applicatie.csproj
+++ b/PVB Stage Applicatie/PVB Stage Applicatie.csproj
@@ -314,6 +314,11 @@
       <DependentUpon>StageApplicatieModel.edmx</DependentUpon>
       <LastGenOutput>StageApplicatieModel.cs</LastGenOutput>
     </Content>
+    <Content Include="App_Data\ExcelTemplates\BedrijfInvoegen.xlsx" />
+    <Content Include="App_Data\ExcelTemplates\BegeleiderInvoegen.xlsx" />
+    <Content Include="App_Data\ExcelTemplates\DocentInvoegen.xlsx" />
+    <Content Include="App_Data\ExcelTemplates\KoppelingInvoegen.xlsx" />
+    <Content Include="App_Data\ExcelTemplates\NonActief.xlsx" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\canvas2image.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
@@ -395,6 +400,9 @@
     <Content Include="Views\Stagiair\BulkInvoerStagiair.cshtml" />
     <Content Include="Views\Stagiair\BulkNonActiefStagiair.cshtml" />
     <Content Include="Views\Bedrijf\BulkInvoerBedrijf.cshtml" />
+    <Content Include="Views\Begeleider\BulkInvoerBegeleider.cshtml" />
+    <Content Include="Views\Docent\BulkInvoerDocent.cshtml" />
+    <Content Include="Views\Koppeling\BulkInvoerKoppeling.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
